--- a/contentaad/BlazorBffAzureAD/Server/appsettings.json
+++ b/contentaad/BlazorBffAzureAD/Server/appsettings.json
@@ -8,9 +8,8 @@
     "SignedOutCallbackPath ": "/signout-callback-oidc"
     // "ClientSecret": "add secret to the user secrets"
   },
-  "UserApiOne": {
-    "ScopeForAccessToken": "api://b2a09168-54e2-4bc4-af92-a710a64ef1fa/access_as_user User.ReadBasic.All user.read",
-    "ApiBaseAddress": "https://localhost:44395"
+  "DirectApi": {
+    "ScopeForAccessToken": "api://b2a09168-54e2-4bc4-af92-a710a64ef1fa/access_as_user User.ReadBasic.All user.read"
   },
   "Logging": {
     "LogLevel": {
