setup for the template

--- a/content/BlazorBffAzureAD/Server/appsettings.json
+++ b/content/BlazorBffAzureAD/Server/appsettings.json
@@ -1,15 +1,18 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "damienbodhotmail.onmicrosoft.com",
-    "TenantId": "7ff95b15-dc21-4ba6-bc92-824856578fc1",
-    "ClientId": "46d2f651-813a-4b5c-8a43-63abcb4f692c",
-    "CallbackPath": "/signin-oidc",
-    "SignedOutCallbackPath ": "/signout-callback-oidc"
-    // "ClientSecret": "add secret to the user secrets"
+    "Domain": "[Enter the domain of your tenant, e.g. contoso.onmicrosoft.com]",
+    "TenantId": "[Enter 'common', or 'organizations' or the Tenant Id (Obtained from the Azure portal. Select 'Endpoints' from the 'App registrations' blade and use the GUID in any of the URLs), e.g. da41245a5-11b3-996c-00a8-4d99re19f292]",
+    "ClientId": "[Enter the Client Id (Application ID obtained from the Azure portal), e.g. ba74781c2-53c2-442a-97c2-3d60re42f403]",
+    "ClientSecret": "[Copy the client secret added to the app from the Azure portal]",
+    "ClientCertificates": [
+    ],
+    // the following is required to handle Continuous Access Evaluation challenges
+    "ClientCapabilities": [ "cp1" ],
+    "CallbackPath": "/signin-oidc"
   },
   "DirectApi": {
-    "ScopeForAccessToken": "api://b2a09168-54e2-4bc4-af92-a710a64ef1fa/access_as_user User.ReadBasic.All user.read"
+    "ScopeForAccessToken": "api://--your-api-clientid--/access_as_user User.ReadBasic.All user.read"
   },
   "Logging": {
     "LogLevel": {
