renaming to DownstreamApi

--- a/content/BlazorBffAzureAD/Server/appsettings.json
+++ b/content/BlazorBffAzureAD/Server/appsettings.json
@@ -11,7 +11,7 @@
     "ClientCapabilities": [ "cp1" ],
     "CallbackPath": "/signin-oidc"
   },
-  "DirectApi": {
+  "DownstreamApi": {
     "ScopeForAccessToken": "api://--your-api-clientid--/access_as_user User.ReadBasic.All user.read"
   },
   "Logging": {
