update graph APIs

--- a/content/BlazorBffAzureAD/Server/appsettings.json
+++ b/content/BlazorBffAzureAD/Server/appsettings.json
@@ -12,7 +12,7 @@
     "CallbackPath": "/signin-oidc"
   },
   "DownstreamApi": {
-    "ScopeForAccessToken": "api://--your-api-clientid--/access_as_user User.ReadBasic.All user.read"
+    "Scopes": "User.ReadBasic.All user.read"
   },
   "Logging": {
     "LogLevel": {
