--- a/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
+++ b/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
@@ -1,27 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Client\BlazorBffAzureAD.Client.csproj" />
-    <ProjectReference Include="..\Shared\BlazorBffAzureAD.Shared.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Client\BlazorBffAzureAD.Client.csproj" />
+		<ProjectReference Include="..\Shared\BlazorBffAzureAD.Shared.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" NoWarn="NU1605" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0" NoWarn="NU1605" />
-	<PackageReference Include="Microsoft.Graph" Version="4.11.0" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="1.21.1" />
-    <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.21.1" />
-    <PackageReference Include="IdentityModel" Version="5.2.0" />
-    <PackageReference Include="IdentityModel.AspNetCore" Version="4.1.0" />
-    <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" NoWarn="NU1605" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0" NoWarn="NU1605" />
+		<PackageReference Include="Microsoft.Identity.Web.MicrosoftGraphBeta" Version="1.21.0" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="1.21.1" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.21.1" />
+		<PackageReference Include="IdentityModel" Version="5.2.0" />
+		<PackageReference Include="IdentityModel.AspNetCore" Version="4.1.0" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />
+	</ItemGroup>
 
 </Project>
