--- a/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
+++ b/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
@@ -15,9 +15,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" NoWarn="NU1605" />
-		<PackageReference Include="Microsoft.Identity.Web.MicrosoftGraphBeta" Version="1.21.1" />
-		<PackageReference Include="Microsoft.Identity.Web" Version="1.21.1" />
-		<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.21.1" />
+		<PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="1.22.1" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="1.22.1" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.22.1" />
 		<PackageReference Include="IdentityModel.AspNetCore" Version="4.1.2" />
 		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />
 	</ItemGroup>
