--- a/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
+++ b/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<UserSecretsId>8e21c463-4afb-4fc4-b018-1919ab2ff9e5</UserSecretsId>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
@@ -20,7 +21,6 @@
 		<PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="1.24.1" />
 		<PackageReference Include="Microsoft.Identity.Web" Version="1.24.1" />
 		<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.24.1" />
-		<PackageReference Include="IdentityModel.AspNetCore" Version="4.2.0" />
 		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.16.1" />
 	</ItemGroup>
 
