--- a/content/Blazor.BFF.AzureAD.Template.nuspec
+++ b/content/Blazor.BFF.AzureAD.Template.nuspec
@@ -9,7 +9,7 @@
 			<projectUrl>https://github.com/damienbod/Blazor.BFF.AzureAD.Template</projectUrl>
 		<authors>damienbod</authors>
 		<owners>damienbod</owners>
-		<icon>./BlazorBffOpenIDConnect/.template.config/icon.png</icon>
+		<icon>./BlazorBffAzureAD/.template.config/icon.png</icon>
 		<language>en-US</language>
 		<tags>Blazor BFF WASM ASP.NET Core</tags>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
