--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,5 +20,5 @@ jobs:
         include-prerelease: True
     - name: Restore dependencies
       run: dotnet restore ./content/BlazorBffAzureAD/Server
-    - name: Build STS
+    - name: Build Blazor projects
       run: dotnet build ./content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj --no-restore
