--- a/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
+++ b/content/BlazorBffAzureAD/Server/BlazorBffAzureAD.Server.csproj
@@ -7,17 +7,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.7" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<ProjectReference Include="..\Client\BlazorBffAzureAD.Client.csproj" />
 		<ProjectReference Include="..\Shared\BlazorBffAzureAD.Shared.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.7" NoWarn="NU1605" />
-		<PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.12.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.7" />
+		<PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="2.12.4" />
 		<PackageReference Include="Microsoft.Identity.Web" Version="2.12.4" />
 		<PackageReference Include="Microsoft.Identity.Web.UI" Version="2.12.4" />
 		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.19.0" />
