--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,8 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0'
-        include-prerelease: True
+        dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore ./content/BlazorBffAzureAD/Server
     - name: Build Blazor projects
